[package]
name = "raytracing-in-one-weekend-series"
version = "0.1.0"
edition = "2021"

[lib]
name = "raytracer"

[dependencies]
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
eframe = "0.29.1"
env_logger = "0.11.5"
image = "0.25.4"
image-webp = "0.2.0"
itertools = "0.13.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
glam = "0.29.0"
rayon = "1.10.0"
rand = "0.9.0-alpha.2"
noise = "0.9.0"
wavefront = "0.2.3"